Modificando los estilos en CSS

--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,14 @@
     <img class="fondog" src="img/fondo.jpg" alt="">
   </div>
 
-  <div class="ventana" id="login">
+  <div  id="login" class="ventana">
     <img class="logo galerias-principa" src="img/logo.png" alt="">
 
 
     <div class="container">
 
       <!--Mensaje de No Ingresar-->
-      <div class="mensaje" id="mensaje"></div>
+      <div id="mensaje" class="mensajeUno"></div>
       <!--Fin de No Ingresar-->
 
       <div class="grupo">
@@ -68,14 +68,12 @@
   <div id="segundaPantalla" class="hide">
     <form id="registrate"  class="registrate">
       <h1 class="letra">Registrar</h1>
+      <span id="error" class="mensaje"></span>
       <input type="text" name="Nombre" id="nombre" placeholder="Nombre" value="">
       <input type="email" name="Correo" id="correo" placeholder="Correo" value="">
       <input type="password"  name="Password" id="password" placeholder="Contraseña" value="">
       <button id="registro" class="registroCorreo">Registrar</button>
     </form>
-    <div id="error">
-
-    </div>
   </div>
   <!-- Fin Registro -->
 
